# platform-logging

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
cmake/: RunInstallSmokeTest.cmake  platform_loggingConfig.cmake.in
config/: logging_config.json
include/platform_logging/: config.h  export.h  field.h  logger.h  logging.h
src/: config.cpp  logger.cpp
tests/: async_logging_test.cpp  basic_logging_test.cpp  concurrent_logging_test.cpp  config_loading_test.cpp  install_smoke.cpp  lifecycle_concurrency_test.cpp  shared_library_test.cpp  shared_logging_lib_a.cpp  shared_logging_lib_b.cpp  shared_logging_test_api.h  test_support.h  text_logging_test.cpp
tests/install_package_smoke/: CMakeLists.txt
